--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
-    "viem": "~1.0.6",
-    "wagmi": "~1.2.0"
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@tableland/local": "^2.3.0",
